--- a/Tarea2_SML.ipynb
+++ b/Tarea2_SML.ipynb
@@ -5,8 +5,20 @@
     "colab": {
       "name": "Tarea2-SML.ipynb",
       "provenance": [],
+      "collapsed_sections": [
+        "Pqw7PY7PV4JR",
+        "xr-OfL5dUQ7w",
+        "NS7qQxTtUQ4X",
+        "ZigeIgQOUQz_",
+        "rHBM91htUQw6",
+        "nH4t8vgwYf04",
+        "Zwbeklq8Yfrg",
+        "uMIatWobZzmf",
+        "z3_c6dRPZzRn",
+        "oXbHwybxYffw"
+      ],
       "toc_visible": true,
-      "authorship_tag": "ABX9TyOp48X23tx+Z4D6PqiUr4GM",
+      "authorship_tag": "ABX9TyORL5je1+8y/+4IezwIfxnG",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -67,7 +79,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "0mpdVyVT-oR3",
-        "outputId": "67477aaf-6b6d-49ba-ea73-0a20abab5cfe"
+        "outputId": "aa6f4307-a65d-4a40-b469-3956aea39d35"
       },
       "outputs": [
         {
@@ -154,7 +166,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "zd5ZaquSMH2d",
-        "outputId": "ebfdec2f-8494-46a7-8d14-ab675c3645d3"
+        "outputId": "50f8ce7e-63fc-4ce7-f964-5118ad49a8ce"
       },
       "execution_count": 4,
       "outputs": [
@@ -207,7 +219,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "Zu9e19gWg0Qp",
-        "outputId": "b3e5e8dd-70ad-4dfa-83ba-44d9c9c24aa0"
+        "outputId": "e47b49c6-9e4e-4cfa-8778-f8ae35a806cb"
       },
       "execution_count": 5,
       "outputs": [
@@ -277,9 +289,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wUn2BnE-sF20",
-        "outputId": "074c32f9-5d24-4d5e-af6b-6200f31de0d9"
+        "outputId": "02f36a40-fb60-4977-e66f-98bf19c4babe"
       },
-      "execution_count": 18,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -325,9 +337,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "a9SUtjKYsHGT",
-        "outputId": "6a62c2eb-2edf-48e0-928a-2914bcd27b70"
+        "outputId": "133a0fcc-355d-48e3-98cd-88d989433dd6"
       },
-      "execution_count": 19,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -373,9 +385,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "He3iZugssIQE",
-        "outputId": "0c992fbb-bd5e-44db-dad6-9e4f57d441b1"
+        "outputId": "3d302afe-900f-44fa-f785-8bf03b56186d"
       },
-      "execution_count": 20,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "stream",
@@ -421,9 +433,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "XY1-h8qksJID",
-        "outputId": "a1b05781-efc7-47d8-dd84-28d11e5caf24"
+        "outputId": "fcba8d54-8511-45d3-9480-9c8ff93c0dad"
       },
-      "execution_count": 21,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "stream",
@@ -469,9 +481,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "f2xLQmi6sKGb",
-        "outputId": "e901a3ac-516e-48d8-9498-b32be15006c6"
+        "outputId": "6a660cd9-0d98-4021-e6e7-11dcc6c73668"
       },
-      "execution_count": 22,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "stream",
@@ -517,9 +529,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "m0rFGArqsL1_",
-        "outputId": "470aa926-827b-448a-da34-18937fecc6cb"
+        "outputId": "aa7545d8-251a-4282-bdd0-12a20a102ef0"
       },
-      "execution_count": 24,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "stream",
@@ -578,9 +590,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fbM8NaVAsT3O",
-        "outputId": "76c30b24-942a-49cc-c277-fc5fed80af99"
+        "outputId": "46c0330e-611a-4d68-e7e9-8e92b6df1c88"
       },
-      "execution_count": 25,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "stream",
@@ -626,9 +638,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "CP75hlzJsU3d",
-        "outputId": "b3b476d4-4f13-4371-e35a-c29c4299077c"
+        "outputId": "5911c8d9-42c5-4caa-84c2-cef5455aa42d"
       },
-      "execution_count": 26,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "stream",
@@ -674,9 +686,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "fyY8r8_FsVtt",
-        "outputId": "b1e884e1-9d8f-40be-9711-7db6c4add1d6"
+        "outputId": "3c765dc3-70a4-4755-edec-69f39b9604c5"
       },
-      "execution_count": 27,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -722,9 +734,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VERj3gIRsWz1",
-        "outputId": "f96ad346-76b8-4483-c692-348bde83838f"
+        "outputId": "530d6eb1-b9f3-4b98-fc88-b87c130bccfb"
       },
-      "execution_count": 28,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -769,7 +781,7 @@
       "cell_type": "code",
       "source": [
         "%%R\n",
-        "\n",
+        "# https://www.statlearning.com/resources-second-edition\n",
         "df_ch <-  read.csv(\"/content/PCA-Cluster/Ch12Ex13.csv\", header=F)\n",
         "head(df_ch,2)"
       ],
@@ -778,9 +790,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "T9L2XwQnrfT2",
-        "outputId": "8dbd4b56-de63-4f03-a6d8-082eed9a93d9"
+        "outputId": "e0c0dd47-ab7a-4f3a-ecf4-10a34e7062a2"
       },
-      "execution_count": 6,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -843,9 +855,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "uWGBdVpcsZZ7",
-        "outputId": "18183577-33d9-41c5-a818-fc3594a15bc7"
+        "outputId": "223e7e50-2d13-4cb3-ee0f-3e1f7befebdf"
       },
-      "execution_count": 29,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "stream",
@@ -891,9 +903,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ozhBNjyGsahc",
-        "outputId": "45986dd6-b351-4e01-a684-36b0636d89fb"
+        "outputId": "cfebbd6a-4af4-4434-c557-0703e63bbf73"
       },
-      "execution_count": 30,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "stream",
@@ -954,9 +966,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "6K5CJNNHUrnH",
-        "outputId": "278c3bf6-a051-43b8-dc66-bfc1f74627a7"
+        "outputId": "463f35bb-6fd1-4171-e7f6-a5768349f44a"
       },
-      "execution_count": 7,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "stream",
@@ -1009,9 +1021,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vYf3nwmfVQ9_",
-        "outputId": "60aa47d0-61a5-4204-a1d6-50d92832e160"
+        "outputId": "3c56268c-5674-4965-f1a1-ce689519f233"
       },
-      "execution_count": 8,
+      "execution_count": 20,
       "outputs": [
         {
           "output_type": "stream",
@@ -1057,9 +1069,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mEgi7-SyeZMg",
-        "outputId": "f7ceac8b-e7ac-416a-9118-208eadf1098d"
+        "outputId": "aaaf2883-d35f-449e-e82b-1fbc48418ae6"
       },
-      "execution_count": 9,
+      "execution_count": 21,
       "outputs": [
         {
           "output_type": "stream",
@@ -1105,9 +1117,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N03c0fJteaZ3",
-        "outputId": "9937ffc0-0b6e-4d06-d294-272dd4b5672a"
+        "outputId": "db13bb6b-9e51-48bd-d7e7-3e24a10842c7"
       },
-      "execution_count": 10,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -1153,9 +1165,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vvlAOYIQebt7",
-        "outputId": "f4c383d7-f3ac-4f76-f094-a729297d1985"
+        "outputId": "9f4af925-b1b5-4511-87f3-bd01bf6e6c63"
       },
-      "execution_count": 11,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "stream",
@@ -1201,9 +1213,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "QXdKXD0Aedd8",
-        "outputId": "ee198eb1-be90-4ffb-b1e5-59c709a39159"
+        "outputId": "88c325d1-c48e-494f-a558-793c32783b0f"
       },
-      "execution_count": 12,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -1249,9 +1261,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "KkaOtr7neeez",
-        "outputId": "8e48f05a-d2f4-49f8-e8b3-6d1738dd7d3f"
+        "outputId": "8d11fda5-207e-42b6-abe6-9fc51d465bf3"
       },
-      "execution_count": 13,
+      "execution_count": 25,
       "outputs": [
         {
           "output_type": "stream",
@@ -1307,9 +1319,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "g1fCH3sFfAaD",
-        "outputId": "e1217fea-f68c-42dd-e9f6-4a724daaad95"
+        "outputId": "165a040d-1bec-4ed3-e70b-e75a62e8c4fd"
       },
-      "execution_count": 14,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "stream",
@@ -1364,9 +1376,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "wT6-POdafB1Y",
-        "outputId": "a96cb800-f9c7-4aa4-9d45-fa8c9beaa258"
+        "outputId": "661fef41-8c36-48e4-e839-e9b11370e276"
       },
-      "execution_count": 15,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -1412,9 +1424,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "C5b0yM3EfDcA",
-        "outputId": "71c04f58-b12e-4247-960e-01c664861af9"
+        "outputId": "6929e85a-9509-4008-ca13-b819e468419f"
       },
-      "execution_count": 16,
+      "execution_count": 28,
       "outputs": [
         {
           "output_type": "stream",
@@ -1460,9 +1472,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "mrhB6ZOTfE9g",
-        "outputId": "7d702c58-de32-4c6b-91e8-569a743559a8"
+        "outputId": "ceca22c8-906f-4177-ef52-8a0407d020d8"
       },
-      "execution_count": 17,
+      "execution_count": 29,
       "outputs": [
         {
           "output_type": "stream",
